updated the id for each specific month's cardTaskGroup.

--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -98,7 +98,7 @@
                     <div class="carousel-caption text-start">
                         <h1>January</h1>
                         <div class="container">
-                            <div id="taskCardGroup">
+                            <div id="taskCardGroup+1">
                             </div>
                         </div>
                     </div>
@@ -110,10 +110,10 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
-                        <h1>Febuary</h1>
+                    <div class="carousel-caption text-start">
+                        <h1>February</h1>
                         <div class="container">
-                            <div id="taskCardGroup">
+                            <div id="taskCardGroup+2">
                             </div>
                         </div>
                     </div>
@@ -125,10 +125,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption text-end">
+                    <div class="carousel-caption text-start">
                         <h1>March</h1>
-                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+3">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -138,10 +140,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>April</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+4">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -151,10 +155,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>May</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+5">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -164,10 +170,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>June</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+6">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -177,10 +185,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>July</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+7">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -190,10 +200,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>August</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+8">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -203,10 +215,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>September</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+9">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -216,10 +230,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>October</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+10">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -229,10 +245,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>November</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+11">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -242,10 +260,12 @@
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption text-start">
                         <h1>December</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        <div class="container">
+                            <div id="taskCardGroup+12">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
