Changed thread names and some ancilliary stuff

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@
           <h3 class="float-md-start mb-0">###</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="../pages/index.html">Volunteers</a>
-            <a class="nav-link" href="#">Organizers</a>
+            <a class="nav-link" href="../pages/index-org.html">Organizers</a>
           </nav>
         </div>
       </header>
