--- a/pages/index-org.html
+++ b/pages/index-org.html
@@ -45,7 +45,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">Volunteer Management App</h3>
+          <h3 class="float-md-start mb-0">###</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link" aria-current="page" href="../pages/index.html">Volunteers</a>
             <a class="nav-link active" aria-current="page" href="../pages/index-org.html">Organizers</a>
@@ -54,7 +54,7 @@
       </header>
 
       <main class="px-3">
-        <h1>VMA - Volunteer Management App</h1>
+        <h1>iVolunteer App</h1>
         <p class="lead">Creating a smooth experience for organizations and volunteers alike!</p>
         <p class="lead">
           <a href="../pages/login.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Log-in /
