--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -29,7 +29,7 @@
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.0/examples/carousel/carousel.css">
+    <link rel="stylesheet" href="../styles/calendar.css">
 
 </head>
 
@@ -48,7 +48,7 @@
     </div>
 
     <template id="taskCardTemplate">
-        <a href="../pages/all-tasks-details.html"
+        <a href="../pages/all-tasks-details.html"  
             class="list-group-item list-group-item-action d-flex gap-3 py-3 design" aria-current="true">
             <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                 class="rounded-circle flex-shrink-0">
@@ -64,13 +64,9 @@
         </a>
     </template>
 
-
-
-
-
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+            <button type="button" data-bs-target="" data-bs-slide-to="0" class="active" aria-current="true"
                 aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -93,7 +89,7 @@
                     <div class="carousel-caption text-start">
                         <h1>January</h1>
                         <div class="container">
-                            <div id="taskCardGroup+1">
+                            <div id="taskCardGroup+1" class="row row-cols-auto">
                             </div>
                         </div>
                     </div>
@@ -101,7 +97,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -116,7 +112,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -131,7 +127,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -146,7 +142,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -161,7 +157,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -176,7 +172,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -191,7 +187,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -206,7 +202,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -221,7 +217,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -236,7 +232,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -251,7 +247,7 @@
             </div>
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                    aria-hidden="true" focusable="false">
                     <rect width="100%" height="100%" fill="#777" /></svg>
 
                 <div class="container">
@@ -274,25 +270,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
-    <!-- <template id="taskCardTemplate">
-        <div class="list-group">
-            <a href="../pages/all-tasks-details.html" class="list-group-item list-group-item-action d-flex gap-3 py-3"
-                aria-current="true">
-                <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
-                    class="rounded-circle flex-shrink-0">
-                <div class="d-flex gap-2 w-100 justify-content-between">
-                    <div>
-                        <h6 class="mb-0 card-title">task name</h6>
-                        <small class="mb-0 opacity-75 card-city">location</small>
-                        <p class="mb-0 card-description">Description</p>
-                    </div>
-                    <p class="mb-0 opacity-50 text-nowrap card-date">date</p>
-                    <p class="mb-0 opacity-100 right-bottom">+</p>
-                </div>
-            </a>
-        </div>
-    </template> -->
 
     <!-- <div class="container">
         <div id="taskCardGroup">
