changed the page titles and meta names to ivolunteer

--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Tasks</title>
-    <meta name="Volunteer Management App Tasks" content="VMA Tasks">
+    <title>iVolunteer|All Tasks</title>
+    <meta name="iVolunteer App Tasks" content="iVolunteer Tasks">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
