--- a/pages/index-org.html
+++ b/pages/index-org.html
@@ -2,8 +2,8 @@
 <html lang="en" class="h-100">
 
 <head>
-  <title>My BCIT Project</title>
-  <meta name="Volunteer Management App Index" content="VMA Index">
+  <title>iVolunteer|Organizer</title>
+  <meta name="iVolunteer App Organizer" content="iVolunteer Organizer">
   <meta name="author" content="BBY13">
 
   <meta charset="utf-8">
