--- a/pages/login.html
+++ b/pages/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Login</title>
-    <meta name="Volunteer Management App Login" content="VMA login">
+    <title>iVolunteer|Sign in</title>
+    <meta name="iVolunteer App Sign in" content="iVolunteer login">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
