--- a/pages/main-org.html
+++ b/pages/main-org.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Org Main</title>
-    <meta name="Volunteer Management App Org Main" content="VMA Org Main">
+    <title>iVolunteer|Organizer Home</title>
+    <meta name="iVolunteer App Organizer Home" content="iVolunteer Organizer Home">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
