--- a/pages/main.html
+++ b/pages/main.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Main</title>
-    <meta name="Volunteer Management App Main" content="VMA Main">
+    <title>iVolunteer|Home</title>
+    <meta name="iVolunteer App Home" content="iVolunteer Home">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -93,52 +93,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
