--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Calendar</title>
-    <meta name="Volunteer Management App Calendar" content="VMA Calendar">
+    <title>iVolunteer|Schedule</title>
+    <meta name="iVolunteer App Schedule" content="iVolunteer Schedule">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
     </div>
 
     <template id="taskCardTemplate">
-        <a href="../pages/all-tasks-details.html"  
+        <a href="../pages/all-tasks-details.html"
             class="list-group-item list-group-item-action d-flex gap-3 py-3 design" aria-current="true">
             <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                 class="rounded-circle flex-shrink-0">
