--- a/pages/login-org.html
+++ b/pages/login-org.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>VMA Org Login</title>
-    <meta name="Volunteer Management App Org Login" content="VMA Org Login">
+    <title>iVolunteer|Sign in</title>
+    <meta name="iVolunteer App Sign in" content="iVolunteer Sign in">
     <meta name="author" content="BBY13">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    
+
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
