rewrote most of the code for threads for firebase

--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -63,15 +63,15 @@
     <div class="taskDisplay">
         <div class="p-5 mb-4 bg-light rounded-3">
             <div class="h-100 p-5 text-white bg-dark rounded-3">
-                <h1 id="title">title</h1>
+                <h1 id="title"></h1>
                 <h5>Date: </h5>
-                <p id="taskDate">date</p>
+                <p id="taskDate"></p>
                 <h5>City:</h5>
-                <p id="taskCity">city</p>
+                <p id="taskCity"></p>
                 <h5>Location: </h5>
-                <p id="taskLoc">location</p>
+                <p id="taskLoc"></p>
                 <h5>Description: </h5>
-                <p id="details"> description</p>
+                <p id="details"></p>
                 <br>
                 <button onclick="doIt()" class="btn btn-outline-light">Sign up</button>
             </div>
