--- a/pages/thread.html
+++ b/pages/thread.html
@@ -38,13 +38,11 @@
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <div class="threads">
-        <div class="header">
-        </div>
+    <div id="contents"></div>
+
+    <div class="comments">
         <textarea></textarea>
         <button>add comment</button>
-        <div class="comments">
-        </div>
     </div>
 
 
@@ -56,8 +54,6 @@
     <!---------------------------------------------->
     <script src="../scripts/firebaseAPI.js"></script>
     <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/authentication.js"></script>
-    <script src="../scripts/data.js"></script>
     <script src="../scripts/thread.js"></script>
 
 
