threads work now, but they all show the same document

--- a/pages/thread.html
+++ b/pages/thread.html
@@ -45,6 +45,10 @@
         <button>add comment</button>
     </div>
 
+    <hr>
+
+    <dl id="comments"></dl>
+
 
     <!-- our own footer goes here-->
     <nav id="footer"></nav>
