styled the page with better colours and fixed the mobile view of all tasks page, fixed paddings, added logo

--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -39,7 +39,7 @@
 
     <!-- the body of your page goes here -->
     <!-- Title of Task pulled from the local storage -->
-    <div class="container-fluid bg-light text-dark p-1">
+    <div class="container-fluid bg-light text-white p-1">
         <div class="container bg-light p-1">
             <h1 class="display-4" id="toptext">Task Details</h1>
             <hr>
@@ -61,7 +61,7 @@
 
 
     <div class="taskDisplay">
-        <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="p-5 bg-light">
             <div class="h-100 p-5 text-white bg-dark rounded-3">
                 <h1 id="title"></h1>
                 <h5>Date: </h5>
