--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -39,11 +39,11 @@
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <div class="container-fluid bg-light text-dark p-3">
+    <div class="container-fluid bg-light text-white p-3">
         <div class="container bg-light p-5">
             <h1 class="display-4" id="toptext">Tasks</h1>
             <hr>
-            <img src="../images/tasksImg.png" alt="tasksImg" class="center">
+            <!-- <img src="../images/tasksImg.png" alt="tasksImg" class="center"> -->
             <!-- <p>Quote of the day: <span id="quote-goes-here">...</span></p> -->
         </div>
     </div>
@@ -69,11 +69,11 @@
 
     <!-- Sets a placeholder for the task templates to be placed -->
     <div class="container">
-        <h1 class="display-4" style="text-align: center;">Sign up!</h1>
+        <h1 class="display-4" style="text-align: center; padding-top: 21px;">Sign up!</h1>
         <p class="opacity-50">List of tasks that are avaiable for you to sign up</p>
         <!-- Here is container for cards  -->
         <div class="container">
-            <div id="taskCardGroup" class="row row-cols-auto">
+            <div id="taskCardGroup" class="row-cols-auto">
             </div>
         </div>
     </div>
