--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -28,9 +28,9 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/calendar.css">
-
+    <link rel="stylesheet" href="../styles/style.css">
+    
 </head>
 
 <body>
@@ -41,15 +41,15 @@
 
     <!-- main info goes here -->
 
-    <div class="container-fluid bg-light text-dark p-5">
+    <!-- <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
             <h1 class="display-4" id="toptext">My Volunteer Schedule</h1>
         </div>
-    </div>
+    </div> -->
 
     <template id="taskCardTemplate">
         <a href="../pages/all-tasks-details.html"
-            class="list-group-item list-group-item-action d-flex gap-3 py-3 design" aria-current="true">
+            class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                 class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
@@ -84,7 +84,7 @@
             <div class="carousel-item active">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
                 <div class="container">
                     <div class="carousel-caption text-start">
                         <h1>January</h1>
@@ -98,7 +98,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -113,7 +113,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -128,7 +128,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -143,7 +143,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -158,7 +158,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -173,7 +173,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -188,7 +188,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -203,7 +203,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -218,7 +218,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -233,7 +233,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -248,7 +248,7 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" focusable="false">
-                    <rect width="100%" height="100%" fill="#777" /></svg>
+                    <rect width="100%" height="100%" fill="#14213d" /></svg>
 
                 <div class="container">
                     <div class="carousel-caption text-start">
@@ -271,12 +271,6 @@
         </button>
     </div>
 
-    <!-- <div class="container">
-        <div id="taskCardGroup">
-        </div>
-    </div> -->
-
-    <!-- <div id="calendar"></div> -->
     <!------------------------------>
 
     <!-- our own footer goes here-->
