--- a/pages/login.html
+++ b/pages/login.html
@@ -43,7 +43,7 @@
 
     <!-- the body of your page goes here -->
 
-    <div class="container" id="toptext">
+    <div class="container" id="toptext" style="padding-top: 21px;">
         <h1>Let's Login!</h1>
     </div>
 
