fixed the hosting problems

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
   <!-- Other libraries and styles of your own -->
   <!-------------------------------------------->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/cover/cover.css">
 
 </head>
 
 <body>
 
-  <body class="d-flex h-100 text-center text-white bg-dark" background="../images/indexPhoto.jpg">
+  <body class="d-flex h-100 text-center text-white bg-dark" background="/images/indexPhoto.jpg">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
           <h3 class="float-md-start mb-0">###</h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="../pages/index.html">Volunteers</a>
-            <a class="nav-link" href="../pages/index-org.html">Organizers</a>
+            <a class="nav-link" href="pages/index-org.html">Organizers</a>
           </nav>
         </div>
       </header>
@@ -51,7 +51,7 @@
         <h1>iVolunteer App</h1>
         <p class="lead">Creating a smooth experience for organizations and volunteers alike!</p>
         <p class="lead">
-          <a href="../pages/login.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Log-in /
+          <a href="pages/login.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Log-in /
             Sign-up</a>
         </p>
       </main>
@@ -68,9 +68,9 @@
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
-  <script src="../scripts/firebaseAPI.js"></script>
-  <script src="../scripts/skeleton-index.js"></script>
-  <script src="../scripts/authentication"></script>
+  <script src="/scripts/firebaseAPI.js"></script>
+  <script src="/scripts/skeleton-index.js"></script>
+  <script src="/scripts/authentication"></script>
 
 </body>
 
