--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -28,7 +28,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 </head>
 
@@ -61,7 +61,7 @@
 
 
     <div class="taskDisplay">
-        <div class="p-5 bg-light">
+        <div class="p-5 detail">
             <div class="h-100 p-5 text-white bg-dark rounded-3">
                 <h1 id="title"></h1>
                 <h5>Date: </h5>
@@ -73,7 +73,7 @@
                 <h5>Description: </h5>
                 <p id="details"></p>
                 <br>
-                <button onclick="doIt()" class="btn btn-outline-light">Sign up</button>
+                <button onclick="doIt()" class="btn btn-outline-light" >Sign up</button>
             </div>
         </div>
     </div>
@@ -86,9 +86,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/firebaseAPI.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/all-tasks-details.js"></script>
+    <script src="/scripts/firebaseAPI.js"></script>
+    <script src="/scripts/skeleton.js"></script>
+    <script src="/scripts/all-tasks-details.js"></script>
 
 </body>
 
