--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -28,8 +28,8 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="../styles/calendar.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/calendar.css">
+    <link rel="stylesheet" href="/styles/style.css">
     
 </head>
 
@@ -48,7 +48,7 @@
     </div> -->
 
     <template id="taskCardTemplate">
-        <a href="../pages/all-tasks-details.html"
+        <a href="/pages/all-tasks-details.html"
             class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                 class="rounded-circle flex-shrink-0">
@@ -279,9 +279,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/firebaseAPI.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/calendar.js"></script>
+    <script src="/scripts/firebaseAPI.js"></script>
+    <script src="/scripts/skeleton.js"></script>
+    <script src="/scripts/calendar.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.2/main.js"></script> -->
 
 </body>
