--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -28,7 +28,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/list-groups/list-groups.css">
 
 </head>
@@ -50,7 +50,7 @@
 
     <template id="taskCardTemplate">
         <div class="list-group">
-            <a href="../pages/all-tasks-details.html"
+            <a href="/pages/all-tasks-details.html"
                 class="list-group-item list-group-item-action d-flex gap-3 py-3 design" aria-current="true">
                 <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                     class="rounded-circle flex-shrink-0">
@@ -87,10 +87,10 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/firebaseAPI.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/authentication.js"></script>
-    <script src="../scripts/all-tasks.js"></script>
+    <script src="/scripts/firebaseAPI.js"></script>
+    <script src="/scripts/skeleton.js"></script>
+    <script src="/scripts/authentication.js"></script>
+    <script src="/scripts/all-tasks.js"></script>
 
 </body>
 
