--- a/pages/forum.html
+++ b/pages/forum.html
@@ -28,7 +28,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 
 </head>
@@ -59,9 +59,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/firebaseAPI.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/forum.js"></script>
+    <script src="/scripts/firebaseAPI.js"></script>
+    <script src="/scripts/skeleton.js"></script>
+    <script src="/scripts/forum.js"></script>
 
 
 
