--- a/text/nav-index.html
+++ b/text/nav-index.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../pages/index.html">Volunteers</a>
+                    <a class="nav-link active" aria-current="page" href="/pages/index.html">Volunteers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../pages/index-org.html">Organizers</a>
+                    <a class="nav-link" aria-current="page" href="/pages/index-org.html">Organizers</a>
                 </li>
             </ul>
         </div>
