--- a/text/nav.html
+++ b/text/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="../images/logo.png" height="72">
+    <a class="navbar-brand" href="/pages/main.html">
+      <img src="/images/logo.png" height="72">
       iVolunteer</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,23 +10,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../pages/main.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="/pages/main.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/calendar.html">My Schedule</a>
+          <a class="nav-link" href="/pages/calendar.html">My Schedule</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/forum.html">The Forum</a>
+          <a class="nav-link" href="/pages/forum.html">The Forum</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/all-tasks.html">All Tasks</a>
+          <a class="nav-link" href="/pages/all-tasks.html">All Tasks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notifications</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../pages/index.html">Sign Out</a>
+          <a class="nav-link" href="/pages/index.html">Sign Out</a>
         </li>
       </ul>
     </div>
