thread topic a tag saves its firestore id to the local storage on-click.

--- a/pages/forum.html
+++ b/pages/forum.html
@@ -43,7 +43,7 @@
         <form id="inputBoxes">
             <textarea name="inputTitle" id="inputTitle" placeholder="Enter the title"></textarea>
             <textarea name="inputContent" id="inputContent" placeholder="Enter content"></textarea>
-            <button id="submitInput" onclick="refreshPage()">Submit</button>
+            <button id="submitInput">Submit</button>
         </form>
     </div>
 
@@ -52,7 +52,7 @@
     <div id="threadStyle">
         <ol id="threads"></ol>
     </div>
-    
+
     <!-- our own footer goes here-->
     <nav id="footer"></nav>
 
