--- a/pages/forum.html
+++ b/pages/forum.html
@@ -43,7 +43,7 @@
         <form id="inputBoxes">
             <textarea name="inputTitle" id="inputTitle" placeholder="Enter the title"></textarea>
             <textarea name="inputContent" id="inputContent" placeholder="Enter content"></textarea>
-            <button id="submitInput">Submit</button>
+            <button id="submitInput" onclick="refreshPage()">Submit</button>
         </form>
     </div>
 
