--- a/pages/thread.html
+++ b/pages/thread.html
@@ -42,14 +42,14 @@
 
     <div class="comments">
         <form id="inputBoxes">
-        <textarea id="commentBox"></textarea>
-        <button id="submit" onclick="refreshPage()">add comment</button>
+            <textarea id="commentBox"></textarea>
+            <button id="submit" onclick="refreshPage()">add comment</button>
         </form>
     </div>
 
     <hr>
 
-    <div id="comments"></div>
+    <div id="commentsToPopulate"></div>
 
 
     <!-- our own footer goes here-->
